syntax = "proto3";

package hello;

// Define the service
service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
  rpc add (addRequest) returns (addResponse);
  rpc idGetter(idRequest) returns (idResponse);
  
}

service TaxationService {
  // Bidirectional streaming
  rpc CreateTaxations(stream TaxationData) returns (stream TaxationResponse);
  rpc UpdateTaxations(stream TaxationData) returns (stream TaxationResponse);
  rpc DeleteTaxations(stream TaxationId) returns (stream DeleteResponse);
  rpc GetAllTaxations(Empty) returns (stream TaxationData);
  rpc GetTaxationById(TaxationId) returns (TaxationResponse);
}

service Accounting {
  rpc CreateAccount (stream Account) returns (stream AccountResponse);
  
  rpc CreateClass (stream BulkCreateClassesRequest) returns (stream BulkCreateClassesResponse);
}

enum AccountType {
  SAVINGS = 0;
  CURRENT = 1;
  SALARY = 2;
}

enum AccountStatus {
  ACTIVE = 0;
  INACTIVE = 1;
  CLOSED = 2;
}

// Contact Info
message ContactInfo {
  string id = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
}

// KYC Details
message KycDetails {
  string id = 1;
  string documentType = 2;
  string documentNumber = 3;
  string issuedBy = 4;
  string issuedDate = 5; // Changed from Timestamp to string
}

// Account main message
message Account {
  string id = 1;
  string holderName = 2;
  string accountNumber = 3;
  AccountType type = 4;
  AccountStatus status = 5;
  double balance = 6;
  string openedAt = 7;  // Changed from Timestamp to string
  bool isActive = 8;
  string createdAt = 9; // Changed from Timestamp to string
  string updatedAt = 10; // Changed from Timestamp to string

  ContactInfo contactInfo = 11;
  KycDetails kycDetails = 12;
}

// Request/Response Wrappers
message AccountId {
  string id = 1;
}

message AccountList {
  repeated Account accounts = 1;
}

message AccountResponse {
  string message = 1;
  Account data = 2;
}

message OperationStatus {
  string message = 1;
  string accountId = 2;
  bool success = 3;
}

// Messages for taxation
message TaxationId {
  int32 id = 1;
}

message Empty {}

message DeleteResponse {
  string status = 1;
  repeated int32 deletedIds = 2;
}

message TaxationData {
  int32 id = 1;
  string title = 2;
  float taxRate = 3;
  string effectiveFrom = 4;
  string effectiveTo = 5;
  string createdBy = 6;
  string documentNumber = 7;
  string remarks = 8;
  bool isActive = 9;
  string createdAt = 10;
  EmployeeInfo info = 11;
  EmployeeAddress address = 12;
}

message EmployeeInfo {
  string name = 1;
  int32 age = 2;
  string designation = 3;
  string maritalStatus = 4;
  string department = 5;
  string joiningDate = 6;
  bool isActive = 7;
}

message EmployeeAddress {
  string houseNo = 1;
  string street = 2;
  string city = 3;
  string state = 4;
  string country = 5;
  string pinCode = 6;
  string landmark = 7;
  bool isActive = 8;
}

message TaxationResponse {
  string message = 1;
  TaxationData data = 2;
}

// Define the request and response message types
message HelloRequest {
  string name = 1;
}
message addRequest {
  int32 number = 1;
}

message addResponse {
  int32 result = 1;
}

message HelloResponse {
  string message = 1;
}

message idRequest {
  int32 Id = 1;
}

message info {
  int32 id = 1;
  string name = 2;
}

message idResponse {
  info details = 1;
}


//Class
message QBClass {
  string qb_id = 1;
  string name = 2;
  string full_name = 3;
  bool is_sub_class = 4;
  bool is_active = 5;
  string domain_source = 6;
  int32 version_token = 7;
  bool is_sparse = 8;
  string created_at = 9;
  string updated_at = 10;
}

message BulkCreateClassesRequest {
  repeated QBClass classes = 1;
}

message BulkCreateClassesResponse {
  repeated string ids = 1;
  string message = 2;
}
// GnuCash Sync Service
service GnuCashSync {
  // Sync a single class to GnuCash
  rpc SyncClassToGnuCash (GnuCashSyncRequest) returns (GnuCashSyncResponse);
  
  // Batch sync classes to GnuCash
  rpc BatchSyncClassesToGnuCash (stream GnuCashBatchRequest) returns (stream GnuCashBatchResponse);
  
  // Sync a single account to GnuCash
  rpc SyncAccountToGnuCash (GnuCashSyncRequest) returns (GnuCashSyncResponse);
  
  // Batch sync accounts to GnuCash
  rpc BatchSyncAccountsToGnuCash (stream GnuCashBatchRequest) returns (stream GnuCashBatchResponse);
  
  // Get sync statistics
  rpc GetSyncStatistics (Empty) returns (SyncStatisticsResponse);
}

// GnuCash sync messages
message GnuCashSyncRequest {
  string classId = 1;
  string accountId = 2;
  int32 taxationId = 3;
}

message GnuCashSyncResponse {
  bool success = 1;
  string message = 2;
  string gcAccountId = 3;
  string data = 4;
}

message GnuCashBatchRequest {
  string classId = 1;
  string accountId = 2;
  int32 taxationId = 3;
}

message GnuCashBatchResponse {
  int32 total = 1;
  int32 successful = 2;
  int32 failed = 3;
  string message = 4;
}

message SyncStatisticsResponse {
  string message = 1;
  string data = 2;
}

// Note: GnuCashSyncRequest supports all entity types for flexibility.
// When calling:
// - SyncClassToGnuCash: only use classId field
// - SyncAccountToGnuCash: only use accountId field
// This design allows for future entity types without breaking changes.

// Universal Integration Service - Integrate ANY software system
service UniversalIntegration {
  // Sync entity from any system to universal model
  rpc SyncToUniversal (UniversalSyncRequest) returns (UniversalSyncResponse);
  
  // Batch sync entities to universal model
  rpc BatchSyncToUniversal (stream UniversalSyncRequest) returns (stream UniversalBatchResponse);
  
  // Map universal entity to target system
  rpc MapToSystem (MapToSystemRequest) returns (MapToSystemResponse);
  
  // Sync universal entity to all configured systems
  rpc SyncToAllSystems (SyncToAllRequest) returns (stream SyncToAllResponse);
  
  // Query universal entities
  rpc QueryEntities (QueryEntitiesRequest) returns (QueryEntitiesResponse);
  
  // Get supported systems
  rpc GetSupportedSystems (Empty) returns (SupportedSystemsResponse);
  
  // Get universal types
  rpc GetUniversalTypes (Empty) returns (UniversalTypesResponse);
  
  // Get integration statistics
  rpc GetIntegrationStatistics (Empty) returns (IntegrationStatisticsResponse);
}

// Universal integration messages
message UniversalSyncRequest {
  string sourceSystem = 1;         // e.g., "Salesforce", "QuickBooks", "SAP"
  string entityType = 2;            // e.g., "Contact", "Account", "Order"
  string sourceEntityId = 3;        // ID in source system
  string sourceData = 4;            // JSON-encoded entity data
}

message UniversalSyncResponse {
  bool success = 1;
  string message = 2;
  string universalEntityId = 3;
  string universalType = 4;
  string data = 5;                  // JSON-encoded universal entity
}

message UniversalBatchResponse {
  int32 total = 1;
  int32 successful = 2;
  int32 failed = 3;
  string message = 4;
}

message MapToSystemRequest {
  string universalEntityId = 1;
  string targetSystem = 2;          // e.g., "GnuCash", "Xero", "SAP"
  string targetEntityType = 3;      // e.g., "Account", "Contact"
}

message MapToSystemResponse {
  bool success = 1;
  string message = 2;
  string mappingId = 3;
  string targetData = 4;            // JSON-encoded target system data
}

message SyncToAllRequest {
  string universalEntityId = 1;
}

message SyncToAllResponse {
  string targetSystem = 1;
  string targetEntityType = 2;
  bool success = 3;
  string message = 4;
}

message QueryEntitiesRequest {
  string universalType = 1;         // Optional filter
  string sourceSystem = 2;          // Optional filter
  string syncStatus = 3;            // Optional filter
  int32 limit = 4;
  int32 offset = 5;
}

message QueryEntitiesResponse {
  string message = 1;
  string data = 2;                  // JSON array of entities
  int32 total = 3;
}

message SystemInfo {
  string name = 1;
  string displayName = 2;
  string type = 3;
  bool enabled = 4;
  repeated string entities = 5;
}

message SupportedSystemsResponse {
  repeated SystemInfo systems = 1;
  int32 total = 2;
}

message UniversalTypeInfo {
  string name = 1;
  string description = 2;
  repeated string coreFields = 3;
  repeated string extendedFields = 4;
}

message UniversalTypesResponse {
  repeated UniversalTypeInfo types = 1;
  int32 total = 2;
}

message IntegrationStatisticsResponse {
  string message = 1;
  string data = 2;                  // JSON-encoded statistics
}
